--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,11 @@
 
 :root {
   --bs-principal: #5a504a;
-  --bs-secundario: #666665;
+  --bs-secundario: #84766d;
+  --bs-terceario: #af9c90;
+  --bs-cuarto: #d9c1b3;
+  --bs-quinto: #050404;
+  --bs-final: #2f2a27;
   --bs--tmenu: #f5f5f5;
 }
 
@@ -31,4 +35,62 @@
 
 .sb-nav-link-icon {
   color: rgba(245, 245, 245, 0.75) !important;
+}
+
+.img-product {
+  width: 4rem;
+}
+
+.text-min {
+  font-size: 0.7rem;
+}
+
+.img-carousel {
+  height: auto;
+  width: 10rem !important;
+  object-fit: cover;
+}
+
+.item-carousel {
+  width: 10rem;
+}
+
+.btn-outline-add {
+  color: var(--bs-cuarto);
+  border-color: var(--bs-cuarto);
+}
+
+.btn-outline-add:hover {
+  color: #000;
+  background-color: var(--bs-cuarto);
+  border-color: var(--bs-cuarto);
+}
+
+.btn-outline-show {
+  color: var(--bs-final);
+  border-color: var(--bs-final);
+}
+
+.btn-outline-show:hover {
+  color: #fff;
+  background-color: var(--bs-final);
+  border-color: var(--bs-final);
+}
+
+.btn-filter {
+  color: #fff;
+  background-color: var(--bs-terceario);
+  border-color: var(--bs-terceario);
+}
+
+.btn-filter:hover {
+  color: #fff;
+  background-color: var(--bs-secundario);
+  border-color: var(--bs-secundario);
+}
+
+@media (min-width: 576px) {
+  .text-sm-reg {
+    font-size: 1rem;
+  }
 }
