--- a/css/estilos.css
+++ b/css/estilos.css
@@ -94,3 +94,9 @@
     font-size: 1rem;
   }
 }
+
+.in-num[type="number"]::-webkit-inner-spin-button,
+.in-num[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
